# moxymind-task

./: Makefile  README.md  pyproject.toml
reqres/: __init__.py
testsuite/: conftest.py
testsuite/api/: test_get.py  test_post.py
testsuite/ui/: conftest.py  test_cart.py  test_login_form.py
