[tool.poetry]
name = "moxymind-task"
version = "0.1.0"
description = ""
authors = ["Jakub Smolar <jsmolar@redhat.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "*"
httpx = "*"
selenium = ">=4.0.0"
backoff = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
